  * Fixed: uriparser now builds on Cygwin
  * Fixed: Now shipping gnulib's config.guess from HEAD
      which is suitable for Haiku (#2116355)
  * Changed: swprintf requirement resolved
  * Changed: Build system changes:
      - configure option --enable-doc added
      - configure.in renamed to configure.ac
      - some Autotools files moved to build-aux directory
  * Soname: 1:8:0

2008-09-01 -- 0.7.2

  * Fixed: Bad cleanup logic in functions
      - uriAddBaseUri(..)
      - uriRemoveBaseUri(..)
      Previously you needed to call uriFreeUriMembers on return code
      URI_ERROR_MALLOC and only then. So that's why these functions now
      take cleanup off your shoulders. An extra call to uriFreeUriMembers
      from your side is still needed in case of success.
  * Soname: 1:7:0

2008-04-27 -- 0.7.1

  * Fixed: Bogus syntax error when parsing URIs with port-like
      passwords, e.g. "http://user:21@host/" (#1948038)
      Thanks to Friedrich Delgado Friedrichs for reporting!
  * Fixed: Parser did not handle trailing slashes correctly in some cases,
      which also made the structures produced from parsing "http://e.com/"
      and "http://e.com" indistinguishable. (#1950126)
      Thanks to Edward Z. Yang for reporting!

2008-04-04 -- 0.7.0

  * Added: Dissection and composition of query strings
  * Added: Documentation improvements
      (in|out|inout indicators, addition of \since and \see)
  * Changed: Code::Blocks project files updated from file format
      version 1.4 to 1.6, which is produced by Code::Blocks 8.02
  * Added: Code::Blocks workspace file
  * Soname: 1:5:0

2008-02-25 -- 0.6.4

  * Added: Syntax-based normalization can now handle relative URIs,
      e.g. "../../a/b/.././c" is normalized to "../../a/c"
  * Fixed: Normalization code could free foreign memory
  * Fixed: Normalization processed the path segment even when asked not to
  * Added: MinGW Makefile and related readme
      Thanks to Michael Anthony Puls II!