@@ -6,8 +6,8 @@ QHP_NAMESPACE = "net.sourceforge.uriparser"
 QHP_VIRTUAL_FOLDER = "uriparser-@VERSION@"
 
 # .qch output
-QCH_FILE = "..\@PACKAGE@-@VERSION@.qch"
-QHG_LOCATION = "qhelpgenerator"
+QCH_FILE = "../@PACKAGE@-@VERSION@.qch"
+QHG_LOCATION = "@QHG_LOCATION@"
 
 
 ###############################################################
@@ -501,7 +501,7 @@ GENERATE_HTMLHELP = @GENERATE_HTMLHELP@
 # The HTML Help Workshop contains a compiler that can convert all HTML output generated by doxygen into a single compressed HTML file (.chm). Compressed HTML files are now used as the Windows 98 help format, and will replace the old Windows help format (.hlp) on all Windows platforms in the future. Compressed HTML files also contain an index, a table of contents, and you can search for words in the documentation. The HTML workshop also contains a viewer for compressed HTML files.
 
 
-HHC_LOCATION = ..\hhc.exe
+HHC_LOCATION = ../hhc.exe
 # If the GENERATE_HTMLHELP tag is set to YES, the HHC_LOCATION tag can be used to specify the location (absolute path including file name) of the HTML help compiler (hhc.exe). If non empty doxygen will try to run the HTML help compiler on the generated index.hhp.
 
 
